# rdp-launcher

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Taskfile.yml
.github/: release-please-config.json
.github/workflows/: ci.yml  coverage.yml  markdown.yml  release-assets-repair.yml  release-please.yml  security.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: helper.rs  launch.rs  lib.rs  logging.rs  preset.rs  profile.rs  rdp.rs  registry.rs  session.rs  store.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: app.css  app.rs  main.rs  model.rs  windowing.rs
crates/windows/: Cargo.toml
crates/windows/src/: credential_state.rs  credentials.rs  launcher.rs  lib.rs  paths.rs  reveal.rs  sessions.rs
docs/: README.md  architecture.md  credential-helper-contract.md  release.md  security-review.md  vertical-slice.md
docs/adr/: 0001-use-mstsc-as-execution-engine.md  0002-model-the-full-rdp-property-surface.md  0003-use-helper-based-credentials-not-app-secret-storage.md  0004-desktop-first-with-shared-cli.md  0005-use-a-normalized-sqlite-store-with-property-value-tables.md
docs/mockups/: README.md  decision-log.md
docs/mockups/claude-round-1/: README.md  active-session-selected.html  empty-first-run.html  home-calm.html  home-with-inspector-calm.html  notes.md  preset-launch-selection.html
docs/research/: 2026-03-06-microsoft-rdp-surface.md
scripts/: build-windows-desktop.ps1  check-windows-linker.ps1  observe-state.sh  run-windows-desktop.ps1  smoke-mstsc-launch.ps1
