[workspace]
members = [
    "crates/core",
    "crates/windows",
    "crates/cli",
    "crates/desktop",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["RDP Launch contributors"]
repository = "https://example.invalid/rdp-launch"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
dioxus = { version = "0.7", features = ["desktop"] }
rusqlite = { version = "0.37", features = ["bundled", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
ulid = { version = "1.2", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v7"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
