[package]
name = "rdp-launch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
rdp-launch-core = { path = "../core" }
rdp-launch-windows = { path = "../windows" }
serde_json.workspace = true
thiserror.workspace = true
