[package]
name = "rdp-launch-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rdp-launch-core = { path = "../core" }
rdp-launch-windows = { path = "../windows" }
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[target.'cfg(windows)'.dependencies]
dioxus.workspace = true
windows.workspace = true
