[package]
name = "rdp-launch-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rdp-launch-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
